# Sensor-fusion

./: .gitignore  CMakeLists.txt  LAB1_INSTRUCTIONS.md  README.md  export_data.py  get_ip.sh  inspect_data.py  inspect_data_v2.py  main.cpp  phone_visualizer.py  requirements.txt  run_demo.sh  setup_env.sh  setup_wsl2_firewall.ps1  task1_calibration.py  test_client.cpp
.cache/clangd/index/: app_utils.cpp.09972C3252A2B06D.idx  audio_file_loader.cpp.E39A932C4884BF66.idx  audio_file_loader.h.00C42B9BE5B6025E.idx  betadist.h.899217722E4DD391.idx  chi2dist.h.1E9910CA22449A77.idx  empdist.h.EBC9F4D41E96300C.idx  estimators.cpp.C670D1861671EB6E.idx  estimators.h.0E8E454C22E271D7.idx  example_ekf.cpp.93CCC2371ABB8BCD.idx  example_ml_estimation.cpp.C36FB476955B511B.idx  example_sensor_model.cpp.C8FDB2114A819BA2.idx  expdist.h.4665AE6FA6352AED.idx  gammadist.h.37A0720CCE5E99FB.idx  gcc_phat.cpp.A5336C06C4124D90.idx  gcc_phat.h.FC00B109BB1BB935.idx  gmdist.h.EDB2AC0BE1BA9A81.idx  localize_from_files.cpp.0A7564CAB6469BD7.idx  localize_multi_recording.cpp.77D1DAE4436B4A9D.idx  localize_realtime.cpp.5A33A81DF06C6D7C.idx  localizer.cpp.0C77B2091D7D7549.idx  localizer.h.3B68F923A3563E36.idx  logndist.h.0914207C015F0A63.idx  main.cpp.D2C79C8A53E51A6B.idx  microphone.cpp.EDF590B3B7CF6CDE.idx  microphone.h.9E81FB5ECFD2FE02.idx  ncchi2dist.h.0BC0F896915DD298.idx  ndist.h.1FDE3C1D5DAE2C43.idx  nl.cpp.20FFAF026A36763B.idx  nl.h.BF478C337F90D0F6.idx  pdfclass.h.D5971F63AFC05018.idx  realtime_localizer.cpp.B687B53BA4C01C0D.idx  sensor_fusion.h.5EBA4C0764E710A7.idx  sensormod.h.0A2510410628B569.idx  sig.h.243FA5E49C448899.idx  streaming_example.cpp.33BE65AFE5295386.idx  tdist.h.F259B1C245F2F0EB.idx  tdoa_calculator.cpp.4DBBE620E0CBF3BD.idx  tdoa_calculator.h.D9BB94FC5C5EEE5B.idx  test_TDOA_and_ML.cpp.499B0D3F13AE8371.idx  test_all_estimators.cpp.E0E1567F0C46982D.idx  (+11 more)
examples/: CMakeLists.txt  task2_modeling.cpp
include/sensor_fusion/: lab1_constants.h  sensor_fusion.h
tests/: test_real_world_drone.cpp  test_sig.cpp  test_toolbox.cpp
